<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <item android:id="@+id/tab1"
        app:showAsAction="always"
        android:icon="@drawable/ic_calendar"
        android:checked="true"
        android:title="@string/menu_title1" />

    <item android:id="@+id/tab2"
        app:showAsAction="always"
        android:icon="@drawable/ic_diary"
        android:enabled="true"
        android:title="@string/menu_title2"/>

    <item android:id="@+id/tab3"
        app:showAsAction="always"
        android:icon="@drawable/ic_media"
        android:enabled="true"
        android:title="@string/menu_title3"/>

    <item android:id="@+id/tab4"
        app:showAsAction="always"
        android:icon="@drawable/ic_person"
        android:enabled="true"
        android:title="@string/menu_title4"/>
</menu>