<?xml version="1.0" encoding="utf-8"?>
<!--toolbar_sub에 쓰일 메뉴-->
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <!--검색-->
    <item
        android:id="@+id/app_bar_search"
        android:icon="@drawable/ic_baseline_search_24"
        android:title="@string/search"
        app:actionViewClass="android.widget.SearchView"
        app:showAsAction="always" />

    <!--추가-->
    <item
        android:id="@+id/addNote"
        android:title="@string/add_note"
        android:icon="@drawable/ic_baseline_add_circle_outline_24"
        app:showAsAction="always"/>

    <!--비밀번호 변경-->
    <item
        android:id="@+id/action_changePasswd"
        android:title="@string/change_passwd" />

    <!--로그아웃-->
    <item
        android:id="@+id/action_logout"
        android:title="@string/logout" />
</menu>