<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android">

    <ImageView
        android:id="@+id/imageView3"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/login_back"
        android:contentDescription="@string/StringValue"/>

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_design"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        tools:layout_editor_absoluteX="14dp" />


    <EditText
        android:id="@+id/join_pwck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:ems="10"
        android:hint="@string/str_passwd_check"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="no"/>

    <EditText
        android:id="@+id/join_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/join_id"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <EditText
        android:id="@+id/join_id"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/join_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.41"
        app:layout_constraintStart_toStartOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="8dp"
        android:background="@drawable/ic_checked_checkbox"
        android:backgroundTint="@color/cloudColor"
        app:layout_constraintBottom_toTopOf="@+id/join_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.238"
        app:layout_constraintStart_toEndOf="@+id/join_id" />

    <EditText
        android:id="@+id/join_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:ems="10"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/join_pwck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        android:autofillHints="no"/>

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_media"
        android:backgroundTint="@color/pink"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/join_button"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="100dp"
        android:background="@drawable/button_media"
        android:backgroundTint="@color/pink"
        android:text="@string/join_us"
        android:textSize="14sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="153dp"
        android:layout_height="61dp"
        android:contentDescription="@string/StringValue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/imageView3"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/join_us" />


</androidx.constraintlayout.widget.ConstraintLayout>

