<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <!--회원가입 화면-->

    <!--배경 이미지-->
    <ImageView
        android:id="@+id/join_usBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/StringValue"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_back" />

    <!--메인 글씨-->
    <ImageView
        android:id="@+id/join_text"
        android:layout_width="153dp"
        android:layout_height="61dp"
        android:contentDescription="@string/StringValue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="@+id/join_usBack"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.184"
        app:srcCompat="@drawable/join_us" />

    <!--상단 툴바-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_main"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--이름 EditText-->
    <EditText
        android:id="@+id/join_name"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/name"
        android:inputType="textPersonName"
        app:layout_constraintBottom_toTopOf="@+id/join_id"
        app:layout_constraintEnd_toEndOf="@+id/join_usBack"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_text"
        app:layout_constraintVertical_bias="1.0" />

    <!--아이디 입력 EditText-->
    <EditText
        android:id="@+id/join_id"
        android:layout_width="165dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="8dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toTopOf="@+id/Join_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.406"
        app:layout_constraintStart_toStartOf="parent" />

    <!--아이디 중복 확인 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/check_button"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_marginEnd="84dp"
        android:layout_marginBottom="12dp"
        android:background="@drawable/ic_baseline_check_circle_24"
        android:backgroundTint="@color/cloudColor"
        app:layout_constraintBottom_toTopOf="@+id/Join_password"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.227"
        app:layout_constraintStart_toEndOf="@+id/join_id" />

    <!--비밀번호 EditText-->
    <EditText
        android:id="@+id/Join_password"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/str_password"
        android:inputType="textPassword"
        app:layout_constraintBottom_toTopOf="@+id/join_pwck"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--비밀번호 확인 EditText-->
    <EditText
        android:id="@+id/join_pwck"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="180dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/str_passwd_check"
        android:inputType="textPassword"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.502"
        app:layout_constraintStart_toStartOf="parent" />

    <!--회원가입 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/signup_Btn"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginStart="100dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/button_main"
        android:text="@string/join_us"
        android:textColor="#FFFFFF"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

    <!--취소 버튼-->
    <androidx.appcompat.widget.AppCompatButton
        android:id="@+id/delete_Btn"
        android:layout_width="93dp"
        android:layout_height="47dp"
        android:layout_marginEnd="100dp"
        android:layout_marginBottom="116dp"
        android:background="@drawable/button_media"
        android:backgroundTint="@color/pink"
        android:text="@string/cancel"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>
