<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto">

    <ImageView
        android:id="@+id/login_background"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/StringValue"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_back" />

    <ImageView
        android:id="@+id/titleName_login"
        android:layout_width="238dp"
        android:layout_height="105dp"
        android:contentDescription="@string/StringValue"
        app:layout_constraintBottom_toTopOf="@+id/login_heart"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_background"
        app:layout_constraintVertical_bias="0.391"
        app:srcCompat="@drawable/title_name" />


    <EditText
        android:id="@+id/join_id"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:layout_weight="1"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/ID"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/login_background"
        app:layout_constraintVertical_bias="0.555" />

    <EditText
        android:id="@+id/Join_password"
        android:layout_width="236dp"
        android:layout_height="45dp"
        android:autofillHints="no"
        android:ems="10"
        android:hint="@string/str_password"
        android:inputType="textPersonName"
        android:textAlignment="textStart"
        android:textSize="18sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/join_id"
        app:layout_constraintVertical_bias="0.0" />

    <ImageView
        android:id="@+id/login_heart"
        android:layout_width="71dp"
        android:layout_height="41dp"
        android:contentDescription="@string/StringValue"
        app:layout_constraintBottom_toBottomOf="@+id/login_background"
        app:layout_constraintEnd_toEndOf="@+id/login_background"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.449"
        app:srcCompat="@drawable/ic_heart" />


    <Button
        android:id="@+id/loginBtn"
        android:layout_width="94dp"
        android:layout_height="41dp"
        android:background="@drawable/button_background"
        android:text="@string/login"
        android:textColor="#FFFFFF"
        android:textSize="16sp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.501"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Join_password"
        app:layout_constraintVertical_bias="0.119" />

    <Button
        android:id="@+id/signup_page_Btn"
        style="@style/Widget.AppCompat.Button.Borderless"
        android:layout_width="85dp"
        android:layout_height="39dp"
        android:layout_marginBottom="9dp"
        android:backgroundTint="#FFFFFF"
        android:text="@string/join_us"
        android:textColor="#3F51B5"
        android:textSize="14sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toEndOf="@+id/textView"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.33" />

    <TextView
        android:id="@+id/textView"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/join_yet"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.362"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/loginBtn"
        app:layout_constraintVertical_bias="0.34" />
    />


</androidx.constraintlayout.widget.ConstraintLayout>