<?xml version="1.0" encoding="utf-8"?>
<!--비밀번호 변경 페이지-->
<androidx.constraintlayout.widget.ConstraintLayout xmlns:tools="http://schemas.android.com/tools"
    android:layout_height="match_parent"
    android:layout_width="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/relativeLayout">

    <!--배경 이미지-->
    <ImageView
        android:id="@+id/changePwdBack"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:contentDescription="@string/StringValue"
        android:scaleType="centerCrop"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0"
        app:srcCompat="@drawable/login_back" />

    <!--비밀번호 변경 글씨 이미지-->
    <ImageView
        android:id="@+id/changePwdTitle"
        android:layout_width="193dp"
        android:layout_height="83dp"
        android:layout_marginTop="47dp"
        android:layout_marginBottom="472dp"
        android:contentDescription="@string/StringValue"
        android:scaleType="fitCenter"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.18"
        app:srcCompat="@drawable/change_passwd" />

    <!--상단 툴바-->
    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar_not"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0" />

    <!--이메일 주소 입력란-->
    <EditText
        android:id="@+id/email"
        android:layout_width="268dp"
        android:layout_height="wrap_content"
        android:autofillHints="no"
        android:hint="@string/emailAddress"
        android:inputType="textEmailAddress"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintVertical_bias="0.518"
        tools:ignore="MissingConstraints" />

    <!--로그인 페이지로 돌아가는 버튼-->
    <Button
        android:id="@+id/gologinBtn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/button_media"
        android:backgroundTint="@color/pink"
        android:text="@string/goLoginPage"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686"
        tools:ignore="MissingConstraints" />


    <!--비밀번호 변경 버튼-->
    <Button
        android:id="@+id/change_Btn"
        android:layout_width="130dp"
        android:layout_height="50dp"
        android:background="@drawable/button_media"
        android:backgroundTint="@color/pink"
        android:text="@string/change_passwd"
        android:textAllCaps="false"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.252"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.686" />

</androidx.constraintlayout.widget.ConstraintLayout>
