<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <!--마이페이지-->

    <!--배경 이미지-->
    <ImageView
        android:id="@+id/myPage_mainBack"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:contentDescription="@string/StringValue"
        android:scaleType="fitXY"
        android:src="@drawable/login_back"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <!--상단 툴바-->
    <include
        android:id="@+id/include"
        layout="@layout/toolbar_not"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraintLayout"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintBottom_toTopOf="@+id/bottomNavigationView"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/include"
        app:layout_constraintVertical_bias="1.0">


        <ImageView
            android:id="@+id/myPage_text"
            android:layout_width="200dp"
            android:layout_height="45dp"
            android:contentDescription="@string/StringValue"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.172"
            app:srcCompat="@drawable/mypage" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_changePasswd"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginTop="24dp"
            android:background="@drawable/button_media"
            android:text="@string/change_passwd"
            android:textAlignment="center"
            android:textColor="#4C4949"
            android:textStyle="bold"
            app:layout_constraintBottom_toTopOf="@+id/btn_logout"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/myPage_text"
            app:layout_constraintVertical_bias="0.729" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/btn_logout"
            android:layout_width="200dp"
            android:layout_height="55dp"
            android:layout_marginBottom="112dp"
            android:background="@drawable/button_media"
            android:text="@string/logout"
            android:textAlignment="center"
            android:textColor="#4C4949"
            android:textStyle="bold"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>

    <!--하단 네비게이션바-->
    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/bottomNavigationView"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:background="@color/white"
        app:itemBackground="@color/white"
        app:itemIconTint="@color/cloudColor"
        app:itemTextColor="@color/cloudColor"
        app:labelVisibilityMode="unlabeled"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:menu="@menu/menu_bottom_navigation"
        tools:ignore="MissingConstraints">

    </com.google.android.material.bottomnavigation.BottomNavigationView>
</androidx.constraintlayout.widget.ConstraintLayout>

